Mejora en la gestión de hilos y recursos
- Se sustituye el uso directo de hilos por el uso de ExecutorServices.
- Se incluye el uso de HikariDB para la gestión de las conexiones a base de datos para el volcado de estadísticas.
- El volcado de las estadisticas ya no se interrumpe si falla el volcado de un registro concreto.
- Se cuida liberar los recursos reservador por la aplicación al cerrarla (pools de conexiones a base de datos, ficheros, etc.