@@ -159,7 +159,7 @@ public class AddDocumentBatchManager {
     	}
 
     	// Registramos el tamano del documento con fines estadisticos
-    	session.setAttribute(ServiceParams.SESSION_PARAM_DOCSIZE, new Long(data.length));
+    	session.setAttribute(ServiceParams.SESSION_PARAM_DOCSIZE, Long.valueOf(data.length));
 
     	// Recuperamos el listado de documentos del lote o lo creamos si este es el primero
         BatchResult batchResult = (BatchResult) session.getObject(ServiceParams.SESSION_PARAM_BATCH_RESULT);
